# perfexpert

./: .gitignore  AUTHORS  CHANGELOG.md  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  configure.ac
common/: Makefile.am  install_dirs.h.in  perfexpert_alloc.c  perfexpert_alloc.h  perfexpert_architecture.sql  perfexpert_backup.c  perfexpert_backup.h  perfexpert_base64.c  perfexpert_base64.h  perfexpert_constants.h  perfexpert_cpuinfo.c  perfexpert_cpuinfo.h  perfexpert_database.c  perfexpert_database.h  perfexpert_fake_globals.h  perfexpert_fork.c  perfexpert_fork.h  perfexpert_hash.h  perfexpert_hash.html  perfexpert_list.c  perfexpert_list.h  perfexpert_log.c  perfexpert_log.h  perfexpert_md5.c  perfexpert_md5.h  perfexpert_output.h  perfexpert_signal.h  perfexpert_string.c  perfexpert_string.h  perfexpert_time.c  perfexpert_time.h  perfexpert_unwind.c  perfexpert_unwind.h  perfexpert_util.c  perfexpert_util.h
lib/cache_sim/: Makefile.am  autogen.sh  cache_policy_lru.c  cache_policy_lru.h  cache_policy_plru.c  cache_policy_plru.h  cache_sim.c  cache_sim.h  cache_sim.sym  cache_sim_access.c  cache_sim_conflict.c  cache_sim_conflict.h  cache_sim_prefetcher.c  cache_sim_prefetcher.h  cache_sim_reuse.c  cache_sim_reuse.h  cache_sim_symbol.c  cache_sim_symbol.h  cache_sim_types.h  cache_sim_util.h  configure.ac
modules/: Makefile.am  perfexpert_module.c  perfexpert_module.h  perfexpert_module.sym  perfexpert_module_base.c  perfexpert_module_base.h  perfexpert_module_base.sym  perfexpert_module_measurement.h
modules/gcc/: Makefile.am  gcc.c  gcc.h  gcc_module.c  gcc_module.h  gcc_module.sym  gcc_options.c  gcc_options.h
modules/gpp/: Makefile.am  gpp.c  gpp.h  gpp_module.c  gpp_module.h  gpp_module.sym
modules/hpctoolkit/: Makefile.am  hpctoolkit.c  hpctoolkit.h  hpctoolkit_database.c  hpctoolkit_database.h  hpctoolkit_module.c  hpctoolkit_module.h  hpctoolkit_module.sql  hpctoolkit_module.sym  hpctoolkit_options.c  hpctoolkit_options.h  hpctoolkit_papi.c  hpctoolkit_papi.h  hpctoolkit_parser.c  hpctoolkit_parser.h  hpctoolkit_path.h.in  hpctoolkit_profile.c  hpctoolkit_profile.h  hpctoolkit_tools.c  hpctoolkit_tools.h  hpctoolkit_tools_mic.c  hpctoolkit_types.h
modules/icc/: Makefile.am  icc.c  icc.h  icc_module.c  icc_module.h  icc_options.c  icc_options.h
modules/io/: Makefile.am  io.h  io_database.c  io_database.h  io_module.c  io_module.h  io_module.sym  io_options.c  io_options.h  io_output.c  io_output.h  io_wrapper.c
modules/lcpi/: Makefile.am  lcpi.h  lcpi_database.c  lcpi_database.h  lcpi_logic.c  lcpi_metrics.c  lcpi_metrics.h  lcpi_metrics_haswell.c  lcpi_metrics_intel.c  lcpi_metrics_intel.h  lcpi_metrics_jaketown.c  lcpi_metrics_knl.c  lcpi_metrics_mic.c  lcpi_metrics_mic.h  lcpi_metrics_papi.c  lcpi_metrics_papi.h  lcpi_metrics_papi_mic.c  lcpi_metrics_papi_mic.h  lcpi_metrics_skl.c  lcpi_module.c  lcpi_module.h  lcpi_module.sql  lcpi_module.sym  lcpi_options.c  lcpi_options.h  lcpi_output.c  lcpi_output.h  lcpi_sort.c  lcpi_sort.h  lcpi_types.h
modules/lustre/: Makefile.am  lustre.h  lustre_module.c  lustre_module.h  lustre_module.sym  lustre_wrapper.c
modules/macpo/: Makefile.am  README.md  macpo.c  macpo.h  macpo_module.c  macpo_module.h  macpo_module.sym  macpo_options.c  macpo_options.h  macpo_types.h
modules/macvec/: Makefile.am  macvec.h  macvec_counters.c  macvec_database.c  macvec_database.h  macvec_module.c  macvec_module.h  macvec_module.sql  macvec_module.sym  macvec_options.c  macvec_options.h  macvec_parse.c  macvec_parse.cc  macvec_types.h
modules/make/: Makefile.am  make.c  make.h  make_module.c  make_module.h  make_module.sym  make_options.c  make_options.h
modules/readelf/: Makefile.am  readelf.c  readelf.h  readelf_module.c  readelf_module.h  readelf_module.sql
modules/sqlrules/: Makefile.am  sqlrules.h  sqlrules_logic.c  sqlrules_logic.h  sqlrules_module.c  sqlrules_module.h  sqlrules_module.sql  sqlrules_module.sym  sqlrules_options.c  sqlrules_options.h
modules/timb/: Makefile.am  timb.h  timb_database.c  timb_database.h  timb_metrics.c  timb_module.c  timb_module.h  timb_module.sql  timb_options.c  timb_options.h  timb_output.c  timb_output.h
modules/vtune/: Makefile.am  analyzer_vtune.c  perfexpert_vtune.c  vtune.h  vtune_database.c  vtune_database.h  vtune_event.c  vtune_event.h  vtune_module.c  vtune_module.h  vtune_module.sql  vtune_options.c  vtune_options.h  vtune_tools.c  vtune_types.h
tools/: Makefile.am  opttran.sh.in  perfexpert.c  perfexpert.h  perfexpert.sh.in  perfexpert_analysis.c  perfexpert_get_info.pl.in  perfexpert_hpctoolkit.c  perfexpert_transformation.c
tools/analyzer/: Makefile.am  analyzer.h  analyzer.sh.in  analyzer_hpctoolkit.c  analyzer_hpctoolkit.h  analyzer_lcpi.c  analyzer_logic.c  analyzer_machine.c  analyzer_main.c  analyzer_options.c  analyzer_options.h  analyzer_output.c  analyzer_output.h  analyzer_profile.c  analyzer_profile.h  analyzer_sort.c  analyzer_sort.h  analyzer_types.h  analyzer_vtune.c  analyzer_vtune.h  hpcdata.sh.in
tools/ci/: Makefile.am  ci.h  main.c  rose_functions.cpp  rose_functions.h
tools/common/: config.h.in  install_dirs.h.in  opttran_constants.h  opttran_list.h  opttran_output.h  opttran_util.h  perfexpert_alloc.h  perfexpert_base64.h  perfexpert_constants.h  perfexpert_database.h  perfexpert_fork.h  perfexpert_hash.h  perfexpert_list.h  perfexpert_log.h  perfexpert_md5.h  perfexpert_output.h  perfexpert_string.h  perfexpert_time.h  perfexpert_util.h
tools/cr/: Makefile.am  ci.h  cr.h  main.c
tools/ct/: Makefile.am  ct.c  ct.h  ct_database.c  ct_database.h  ct_input.c  ct_logic.c  ct_main.cpp  ct_options.c  ct_options.h  ct_pattern.c  ct_real_main.c  ct_recommendation.c  ct_rose.cpp  ct_rose.hpp  ct_tools.c  ct_tools.h  ct_transformation.c  ct_traversal.cpp  main.c  main.cpp  rose_functions.cpp  rose_functions.h
tools/hound/: Makefile.am  cpuid.h  discovery_amd.h  discovery_intel.h  err.h  hound.c  hound.sql  typeDefinitions.h  x86-64_specifics.h  x86_generic.h  x86_specifics.h
tools/pr/: main.c  (+2 more)
(+578 files in other folders)
